--- a/ansible/ENV/Dockerfile
+++ b/ansible/ENV/Dockerfile
@@ -1,5 +1,5 @@
 FROM almalinux:9
 CMD ["sleep", "100"]
 ENV name="Vijaya" \
-    profession="Devops Engineer" z
+    profession="Devops Engineer" \
     location="UK"
