--- a/ansible/ENTRYPOINT/Dockerfile
+++ b/ansible/ENTRYPOINT/Dockerfile
@@ -1,6 +1,6 @@
 FROM almalinux:9
-#ENTRYPOINT ["ping", "google.com"]
+ENTRYPOINT ["ping", "google.com"]
 
-ENTRYPOINT ["ping"]
-CMD ["google.com"]
+#ENTRYPOINT ["ping"]
+#CMD ["google.com"]
 
